Fix CSS so that form does not shift.

--- a/war/css/common.css
+++ b/war/css/common.css
@@ -397,7 +397,7 @@ tr > td
 .formInTabPane {
 	margin-top: 15px;
 	margin-bottom: 15px;
-	margin-left: 15px;
+	margin-left: 10px;
 	margin-right: 15px;
 }
 
